scrollbar problem solved

--- a/public/render/blocks/actionBar/ActionBar.css
+++ b/public/render/blocks/actionBar/ActionBar.css
@@ -73,7 +73,7 @@
     }
 
     .action-bar__container {
-        margin: 0;
+        margin: 0 30px;
         width: 100%;
     }
 }
