--- a/public/render/blocks/iconedHeader/IconedHeader.css
+++ b/public/render/blocks/iconedHeader/IconedHeader.css
@@ -5,6 +5,8 @@
     display: flex;
     width: 100%;
     height: 10vh;
+    z-index: 2;
+    background: rgba(255, 255, 255, .9);
 }
 
 .iconed-header__icon-bar {
