--- a/public/render/blocks/order/Order.css
+++ b/public/render/blocks/order/Order.css
@@ -11,7 +11,7 @@
     right: 0;
 
     height: 100vh;
-    width: 250px;
+    width: 260px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
@@ -21,7 +21,7 @@
     border-left: 1px solid #D6D6D6;
 
     padding: 20px;
-    z-index: 2;
+    z-index: 1;
 
     transition: display 1.5s ease-in-out;
 }
