--- a/public/render/views/RestaurantInfoView/RestaurantInfoView.css
+++ b/public/render/views/RestaurantInfoView/RestaurantInfoView.css
@@ -5,8 +5,8 @@
 
 
 .restaurant-info-view {
-    overflow-y: scroll;
-    height: 100vh;
+    height: 100%;
+    width: 100%;
 
     display: flex;
     flex-direction: column;
